# easy_stat_edu

./: .gitignore  CLAUDE.md  EDA_CORRELATION_REVIEW_REPORT.md  FACTOR_ANALYSIS_PCA_STATISTICAL_REVIEW_REPORT.md  FEATURES.md  GITHUB_PAGES_DEPLOYMENT.md  IMPLEMENTATION_SUMMARY.md  README.md  REGRESSION_REVIEW_REPORT.md  TEXT_TIMESERIES_DATAPROC_ANALYSIS_SUPPORT_REVIEW.md  calc.js  calc.py  common.py  debug_log.txt  dummy_support.csv  eslint.config.js  fa_output.txt  findings.md  index.html  manual.html  package-lock.json  package.json  playwright.config.js  playwright_log.txt  progress.md  pyscript.json  requirements.txt  statistical_review_report.md  task_plan.md  temp_fa_diag.mjs  test_click.js  test_click2.js  test_failures.txt  test_output.txt  test_rm_anova.py  test_ui.js  test_ui2.js  test_ui3.js  test_ui4.js
.agent/: fix_workflow_paths.py  package-manager.json
.cursor/: mcp.json
.planning/: progress.md
.serena/: project.yml
app/: common.py  eda.py  main.py
css/: style.css
datasets/: anova_demo.csv  cleansing_test.csv  cross_tab_test.csv  demo_all_analysis.csv  factor_analysis_demo.csv  factor_data_test.csv  logistic_demo.csv  mcnemar_test.csv  merge_test_1.csv  merge_test_2.csv  multiple_regression_demo.csv  scale_info_test.csv  textmining_demo.csv  time_series_demo.csv  ttest_demo.csv
docs/: FEATURES.md  README.md  index.html  pyscript.json
js/: main.js  utils.js
pages/: 00_データクレンジング.py  01_探索的データ分析（EDA）.py  (+13 more)
rust_app/: Cargo.toml
rust_app/src/: correlation.rs  eda.rs  lib.rs  utils.rs
rust_app/www/: index.html
rust_app/www/js/: app.js
(+172 files in other folders)
