[package]
name = "easy_stat_edu_rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
csv = "1.2"
statrs = "0.16"
getrandom = { version = "0.2", features = ["js"] }
serde_json = "1.0"
